fixing bug overflow  widescreen

--- a/src/indexGlobal.styles.css
+++ b/src/indexGlobal.styles.css
@@ -23,6 +23,7 @@ body {
 
 div {
   width: 100%;
+  overflow: hidden;
 }
 
 @media (max-width: 768px) {
